--- a/index.css
+++ b/index.css
@@ -1,21 +1,22 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: Roboto;
 }
 body {
   background-image: url(netflix-background-image\ 1.png);
-  background-position: center;
   background-repeat: no-repeat;
-  color: aliceblue;
-  height: 100vh;
-
+  /* width: 1440px;
+    height: 1096px; */
+  color: white;
   background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
 .container {
-  background-color: rgb(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.3);
   /* margin-top: 20px;
-  margin-left: 40px; */
-  color: white;
+    margin-left: 40px; */
   width: 1240px;
   margin: auto;
 }
